software/drivers/USB_DLLs_and_Headers/USB DLLs and Headers/SLABCP2110.cs


        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_SetUartEnable(IntPtr device, int enable);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_GetUartEnable(IntPtr device, ref int enable);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_Read(IntPtr device, byte[] buffer, uint numBytesToRead, ref uint numBytesRead);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_Write(IntPtr device, byte[] buffer, uint numBytesToWrite, ref uint numBytesWritten);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_FlushBuffers(IntPtr device, int flushTransmit, int flushReceive);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_CancelIo(IntPtr device);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_SetTimeouts(IntPtr device, uint readTimeout, uint writeTimeout);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_GetTimeouts(IntPtr device, ref uint readTimeout, ref uint writeTimeout);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_GetUartStatus(IntPtr device, ref ushort transmitFifoSize, ref ushort receiveFifoSize, ref byte errorStatus, ref byte lineBreakStatus);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_SetUartConfig(IntPtr device, uint baudRate, byte dataBits, byte parity, byte stopBits, byte flowControl);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_GetUartConfig(IntPtr device, ref uint baudRate, ref byte dataBits, ref byte parity, ref byte stopBits, ref byte flowControl);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_StartBreak(IntPtr device, byte duration);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_StopBreak(IntPtr device);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_Reset(IntPtr device);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_ReadLatch(IntPtr device, ref ushort latchValue);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_WriteLatch(IntPtr device, ushort latchValue, ushort latchMask);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_GetPartNumber(IntPtr device, ref byte partNumber, ref byte version);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_GetLibraryVersion(ref byte major, ref byte minor, ref int release);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_GetHidLibraryVersion(ref byte major, ref byte minor, ref int release);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_GetHidGuid(ref Guid guid);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_SetLock(IntPtr device, ushort lockValue);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_GetLock(IntPtr device, ref ushort lockValue);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_SetUsbConfig(IntPtr device, ushort vid, ushort pid, byte power, byte powerMode, ushort releaseVersion, byte flushBuffers, byte mask);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_GetUsbConfig(IntPtr device, ref ushort vid, ref ushort pid, ref byte power, ref byte powerMode, ref ushort releaseVersion, ref byte flushBuffers);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_SetManufacturingString(IntPtr device, byte[] manufacturingString, byte strlen);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_GetManufacturingString(IntPtr device, StringBuilder manufacturingString, ref byte strlen);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_SetProductString(IntPtr device, byte[] productString, byte strlen);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_GetProductString(IntPtr device, StringBuilder productString, ref byte strlen);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_SetSerialString(IntPtr device, byte[] serialString, byte strlen);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_GetSerialString(IntPtr device, StringBuilder serialString, ref byte strlen);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_SetPinConfig(IntPtr device, byte[] pinConfig, int useSuspendValues, ushort suspendValue, ushort suspendMode, byte rs485Level, byte clkDiv);

        [DllImport("SLABHIDtoUART.dll")]
        public static extern int HidUart_GetPinConfig(IntPtr device, byte[] pinConfig, ref int useSuspendValues, ref ushort suspendValue, ref ushort suspendMode, ref byte rs485Level, ref byte clkDiv);

        #endregion
    }
}
